# vibe-gba

./: .gitignore  Cargo.toml  LICENSE  PROMPT.md  README.md  package.json
scripts/: emerald-m1-onboarding.input
site/: 404.html  _headers  index.html  styles.css
site/play/: index.html  play.js
site/play/pkg/: package.json  vibe_gba.d.ts  vibe_gba.js  vibe_gba_bg.wasm  vibe_gba_bg.wasm.d.ts
src/: bios.rs  bus.rs  cartridge.rs  cpu.rs  edu.rs  gba.rs  lib.rs  main.rs  ppu.rs  web.rs
tests/: site.test.mjs
