[package]
name = "vibe-gba"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bincode = "1.3"
png = "0.17"
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.5"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
minifb = "0.27"
